--- a/c2w-foundation/federation-manager/pom.xml
+++ b/c2w-foundation/federation-manager/pom.xml
@@ -5,7 +5,7 @@
         <groupId>org.c2w</groupId>
         <artifactId>c2w-foundation</artifactId>
         <relativePath>../pom.xml</relativePath>
-        <version>0.4.0-SNAPSHOT</version>
+        <version>0.5.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>federation-manager</artifactId>
@@ -14,22 +14,28 @@
         <dependency>
             <groupId>org.c2w</groupId>
             <artifactId>federate-base</artifactId>
-            <version>0.4.0-SNAPSHOT</version>
+            <version>0.5.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.c2w</groupId>
             <artifactId>c2w-coa</artifactId>
-            <version>0.4.0-SNAPSHOT</version>
+            <version>0.5.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.c2w</groupId>
             <artifactId>c2w-coa-gui</artifactId>
-            <version>0.4.0-SNAPSHOT</version>
+            <version>0.5.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
             <version>1.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
