--- a/c2w-foundation/pom.xml
+++ b/c2w-foundation/pom.xml
@@ -3,6 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <properties>
+        <maven.test.skip>true</maven.test.skip>
         <cpswt.version>0.5.0-SNAPSHOT</cpswt.version>
         <portico.version>2.1.0</portico.version>
         <dropwizard.version>1.0.3</dropwizard.version>
@@ -131,41 +132,41 @@
         </plugins>
     </build>
 
-    <repositories>
-        <repository>
-            <id>archiva.internal</id>
-            <name>Internal Release Repository</name>
-            <!--<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/internal/</url>-->
-            <url>http://cpswtng_archiva:8080/repository/internal/</url>
-        </repository>
-        <repository>
-            <id>archiva.snapshots</id>
-            <name>Internal Snapshot Repository</name>
-            <!--<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/snapshots/</url>-->
-            <url>http://cpswtng_archiva:8080/repository/snapshots/</url>
-        </repository>
-    </repositories>
+    <!--<repositories>-->
+        <!--<repository>-->
+            <!--<id>archiva.internal</id>-->
+            <!--<name>Internal Release Repository</name>-->
+            <!--&lt;!&ndash;<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/internal/</url>&ndash;&gt;-->
+            <!--<url>http://cpswtng_archiva:8080/repository/internal/</url>-->
+        <!--</repository>-->
+        <!--<repository>-->
+            <!--<id>archiva.snapshots</id>-->
+            <!--<name>Internal Snapshot Repository</name>-->
+            <!--&lt;!&ndash;<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/snapshots/</url>&ndash;&gt;-->
+            <!--<url>http://cpswtng_archiva:8080/repository/snapshots/</url>-->
+        <!--</repository>-->
+    <!--</repositories>-->
 
-    <distributionManagement>
-        <repository>
-            <id>archiva.internal</id>
-            <name>Internal Release Repository</name>
-            <!--<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/internal/</url>-->
-            <url>http://cpswtng_archiva:8080/repository/internal/</url>
-        </repository>
-        <snapshotRepository>
-            <id>archiva.snapshots</id>
-            <name>Internal Snapshot Repository</name>
-            <!--<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/snapshots/</url>-->
-            <url>http://cpswtng_archiva:8080/repository/snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
+    <!--<distributionManagement>-->
+        <!--<repository>-->
+            <!--<id>archiva.internal</id>-->
+            <!--<name>Internal Release Repository</name>-->
+            <!--&lt;!&ndash;<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/internal/</url>&ndash;&gt;-->
+            <!--<url>http://cpswtng_archiva:8080/repository/internal/</url>-->
+        <!--</repository>-->
+        <!--<snapshotRepository>-->
+            <!--<id>archiva.snapshots</id>-->
+            <!--<name>Internal Snapshot Repository</name>-->
+            <!--&lt;!&ndash;<url>http://c2w-cdi.isis.vanderbilt.edu:8088/repository/snapshots/</url>&ndash;&gt;-->
+            <!--<url>http://cpswtng_archiva:8080/repository/snapshots/</url>-->
+        <!--</snapshotRepository>-->
+    <!--</distributionManagement>-->
 
-    <scm>
-        <connection>scm:git:https://git.vulcan.isis.vanderbilt.edu/projects/c2wtng/c2wtng-java</connection>
-        <developerConnection>scm:git:https://git.vulcan.isis.vanderbilt.edu/projects/c2wtng/c2wtng-java
-        </developerConnection>
-        <url>https://vulcan.isis.vanderbilt.edu/projects/c2wtng/c2wtng-java/folder/master/</url>
-    </scm>
+    <!--<scm>-->
+        <!--<connection>scm:git:https://git.vulcan.isis.vanderbilt.edu/projects/c2wtng/c2wtng-java</connection>-->
+        <!--<developerConnection>scm:git:https://git.vulcan.isis.vanderbilt.edu/projects/c2wtng/c2wtng-java-->
+        <!--</developerConnection>-->
+        <!--<url>https://vulcan.isis.vanderbilt.edu/projects/c2wtng/c2wtng-java/folder/master/</url>-->
+    <!--</scm>-->
 
 </project>
