--- a/cpswt-core/root/pom.xml
+++ b/cpswt-core/root/pom.xml
@@ -16,6 +16,12 @@
             <artifactId>hla-wrapper</artifactId>
             <version>0.5.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.cpswt</groupId>
+            <artifactId>utils</artifactId>
+            <version>0.5.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
