--- a/cpswt-core/config/pom.xml
+++ b/cpswt-core/config/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.7.8</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-joda</artifactId>
+            <version>2.7.8</version>
+        </dependency>
 
         <dependency>
             <groupId>commons-cli</groupId>
