--- a/cpswt-core/fedmanager-host/conf/triple/fedmgrconfig.json
+++ b/cpswt-core/fedmanager-host/conf/triple/fedmgrconfig.json
@@ -2,16 +2,16 @@
   "federateRTIInitWaitTimeMs": 200,
   "federateType": "FederationManager",
   "federationId": "FedManager",
-  "isLateJoiner": true,
+  "isLateJoiner": false,
   "lookAhead": 0.1,
   "stepSize": 1,
   "bindHost": "127.0.0.1",
   "port": 8083,
   "controlEndpoint": "/fedmgr",
   "federatesEndpoint": "/federates",
-  "federationEndTime": 0,
+  "federationEndTime": 2,
   "realTimeMode": true,
   "terminateOnCOAFinish": false,
-  "fedFile": "fom/FedManager.fed",
-  "experimentConfig": "conf/experimentConfig.json"
+  "fedFile": "fom/triple/TripleFederation.fed",
+  "experimentConfig": "conf/triple/experimentConfig.json"
 }
