--- a/testfiles/experimentConfig.json
+++ b/testfiles/experimentConfig.json
@@ -25,5 +25,7 @@
       "count": 1
     }
   ],
-  "pauseTimes": []
+  "pauseTimes": [],
+  "coaDefinition": "coaConfig.json",
+  "coaSelection": "coaSelection.json"
 }
