--- a/cpswt-core/coa/pom.xml
+++ b/cpswt-core/coa/pom.xml
@@ -18,7 +18,7 @@
         </dependency>
         <dependency>
             <groupId>org.cpswt</groupId>
-            <artifactId>utils</artifactId>
+            <artifactId>config</artifactId>
             <version>0.6.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
