--- a/cpswt-core/federate-base/gradle.properties
+++ b/cpswt-core/federate-base/gradle.properties
@@ -1,9 +1,9 @@
-archivaUser=admin
-archivaPassword=adminpass123
-archivaHostId=localhost
-archivaPort=8080
-version=0.7.0-SNAPSHOT
+# archivaUser=admin
+# archivaPassword=adminpass123
+# archivaHostId=localhost
+# archivaPort=8080
+# version=0.7.0-SNAPSHOT
 
-org.gradle.console=plain
+# org.gradle.console=plain
 
-omnetppHome=/opt/omnetpp-5.6.2
+# omnetppHome=/opt/omnetpp-5.6.2
